--- a/_posts/guides/2015-06-22-gitGuide.md
+++ b/_posts/guides/2015-06-22-gitGuide.md
@@ -1,7 +1,7 @@
 ---
 layout: guide
 title:  "GIT"
-date:   2015-06-22
+date:   2015-06-25
 categories: guides
 ---
 
@@ -11,7 +11,7 @@ categories: guides
         * `git config --global credential.helper wincred`
     * linux:      
         * `git config --global credential.helper cache`
-        * `git config --global credential.helper 'cache --timeout=<sec>`
+        * `git config --global credential.helper `cache --timeout=<sec>`
 * Posh-Git : helps powershell with git
 * `git config --global user.name "<user name>"`
 * `git config --global user.email <e-mail>`
@@ -38,75 +38,75 @@ Fetch : `git fetch`
 
 ####Help : `git help <verb>`
 
-Setting up a repository
-    git init : make a new repository
-    git clone <URL> <directory name - optional> : pull down a repository, optionally put it into a directory with name <directory name>
+###Setting up a repository
+* `git init` : make a new repository
+* `git clone <URL> <directory name - optional>`` : pull down a repository, optionally put it into a directory with name <directory name>
 
 
-Running:
-    git add <filename> : will add a file to the next comment "staging"
-    git status : will report repository status
-    git diff : shows you what you have changed in your files
-    git commit:
-        -m <message> : puts message in directly
-        -a : automatically stages any changed files
-        --amend : modifies the prior commit, you can add files and notes
-    git rm : removes a file, requires a commit to complete
-        --chached : removes from staging area but keeps in directory 
-    git pull : pulls down remote repository into local
-        --rebase : makes a mirror rather than a branch, does not cause merging when you push
-    git mv <source> <destination> : rename or move file  
-    git log : history of commits
-        -p : shows the changes between commits
-        -<n> : shows only the <n> most recent commits 
-        --since : since a date
-        --stat : shows stats for each commit (num of files changed etc..)
-        --pretty : takes a number of args to prettify output
-            --pretty=oneline : makes every commit oneline
-            --pretty=short : makes a shortend format
-            --pretty=full : 
-            --pretty=fuller :
-            --pretty=format: <format> : formats output per format spec (http://www.git-scm.com/book/en/v2/ch00/pretty_format) <- could make an output to a text file to run a script and generate a nice log
-    git push [remote-name] [branch-name] : pushes up
+###Running:
+* `git add <filename>` : will add a file to the next comment "staging"
+* `git status` : will report repository status
+* `git diff` : shows you what you have changed in your files
+* `git commit`:
+    * `-m <message>` : puts message in directly
+    * `-a` : automatically stages any changed files
+    * `--amend` : modifies the prior commit, you can add files and notes
+* `git rm` : removes a file, requires a commit to complete
+*     * `--chached` : removes from staging area but keeps in directory 
+* git pull : pulls down remote repository into local
+    * `--rebase` : makes a mirror rather than a branch, does not cause merging when you push
+* git mv <source> <destination> : rename or move file  
+* git log : history of commits
+     * `-p` : shows the changes between commits
+     * `-<n>` : shows only the <n> most recent commits 
+     * `--since` : since a date
+     * `--stat` : shows stats for each commit (num of files changed etc..)
+     * `--pretty` : takes a number of args to prettify output
+         * `--pretty=oneline` : makes every commit oneline
+         * `--pretty=short` : makes a shortend format
+         * `--pretty=full` : 
+         * `--pretty=fuller` :
+         * `--pretty=format: <format>` : formats output per format spec (http://www.git-scm.com/book/en/v2/ch00/pretty_format) <- could make an output to a text file to run a script and generate a nice log
+* `git push [remote-name] [branch-name]` : pushes up
 
-Tags:
-    git tag : shows tags
-        -a <version> : saves a version tag
-        -m <message> : saves a mesage
-        after the fact : git tag -a <version> <begining of commit checksum>
-    git show <verion> : shows tagged data   
-    git push <remoterepo> --tags : pushes tag locations
-    git checkout -b <newBranch> <tag> : checkout a tagged commit
+###Tags:
+* git tag : shows tags
+    * `-a <version>` : saves a version tag
+    * `-m <message>` : saves a mesage
+    * after the fact : `git tag -a <version> <begining of commit checksum>`
+* `git show <verion>` : shows tagged data   
+* `git push <remoterepo> --tags` : pushes tag locations
+* `git checkout -b <newBranch> <tag>` : checkout a tagged commit
 
-Branching:
-    git branch : shows available branches
-        <newBranch> : makes a new branch at your current location
-        -d <branch> : deletes a branch
-        -v : shows shows last commit on each branch
-        --merged : shows which branches have been merged into the working branch
-        --no-merged : branches which you have not merged in
-    git checkout <branch> : switches to a new branch, if branch does not exist, it is created
-    git merge <branch in> : merges branch in with the branch which you are currently on
-    Deleting:
-        local : git branch -d <branch>
-        remote : git push origin :<remoteBranch>
+###Branching:
+* `git branch` : shows available branches
+    * `<newBranch>` : makes a new branch at your current location
+    * `-d <branch>` : deletes a branch
+    * `-v` : shows shows last commit on each branch
+    * `--merged` : shows which branches have been merged into the working branch
+    * `--no-merged` : branches which you have not merged in
+* `git checkout <branch>` : switches to a new branch, if branch does not exist, it is created
+* `git merge <branch in>` : merges branch in with the branch which you are currently on
+* Deleting:
+    * local : `git branch -d <branch>`
+    * remote : `git push origin :<remoteBranch>`
 
 
 
-Ignoring files:
-    Make a file called ".gitignore"
-        lines with # are ignored
-        use glob notatin
-        can use "/" for paths
-        EX:
-            *.[oa] : ignore files ending in "o" or "a"
-            *~ : ignore files ending in ~
-        thoughts : binaries (o,a). temps (tmp, *~), logs
+###Ignoring files:
+* Make a file called ".gitignore"
+    * lines with # are ignored
+    * use glob notatin
+    * can use "/" for paths
+    * EX:
+        * `*.[oa]` : ignore files ending in "o" or "a"
+        * `*~` : ignore files ending in ~
+    * thoughts : binaries (o,a). temps (tmp, *~), logs
 
 
 
 http://www.git-scm.com/book/en/v2/Git-Branching-Branching-Workflows
 
-get a remote branch:
-    git fetch <origin> <branch>
-    git checkout <branch>
+####get a remote branch:
+* `git fetch <origin> <branch>`
+* `git checkout <branch>`
