added tags and spell checked

--- a/_posts/guides/2015-06-22-gitGuide.md
+++ b/_posts/guides/2015-06-22-gitGuide.md
@@ -3,6 +3,10 @@ layout: guide
 title:  "GIT"
 date:   2015-06-25
 categories: guides
+tags: 
+- git 
+- code 
+- programming
 ---
 
 ###CONFIGURATION:
@@ -62,8 +66,8 @@ Fetch : `git fetch`
      * `--since` : since a date
      * `--stat` : shows stats for each commit (num of files changed etc..)
      * `--pretty` : takes a number of args to prettify output
-         * `--pretty=oneline` : makes every commit oneline
-         * `--pretty=short` : makes a shortend format
+         * `--pretty=oneline` : makes every commit one line
+         * `--pretty=short` : makes a shortened format
          * `--pretty=full` : 
          * `--pretty=fuller` :
          * `--pretty=format: <format>` : formats output per format spec (http://www.git-scm.com/book/en/v2/ch00/pretty_format) <- could make an output to a text file to run a script and generate a nice log
@@ -72,8 +76,8 @@ Fetch : `git fetch`
 ###Tags:
 * git tag : shows tags
     * `-a <version>` : saves a version tag
-    * `-m <message>` : saves a mesage
-    * after the fact : `git tag -a <version> <begining of commit checksum>`
+    * `-m <message>` : saves a message
+    * after the fact : `git tag -a <version> <beginning of commit checksum>`
 * `git show <verion>` : shows tagged data   
 * `git push <remoterepo> --tags` : pushes tag locations
 * `git checkout -b <newBranch> <tag>` : checkout a tagged commit
@@ -96,7 +100,7 @@ Fetch : `git fetch`
 ###Ignoring files:
 * Make a file called ".gitignore"
     * lines with # are ignored
-    * use glob notatin
+    * use glob notation
     * can use "/" for paths
     * EX:
         * `*.[oa]` : ignore files ending in "o" or "a"
@@ -104,8 +108,6 @@ Fetch : `git fetch`
     * thoughts : binaries (o,a). temps (tmp, *~), logs
 
 
-
-http://www.git-scm.com/book/en/v2/Git-Branching-Branching-Workflows
 
 ####get a remote branch:
 * `git fetch <origin> <branch>`
