got new picture function working

--- a/_posts/guides/2015-06-22-gitGuide.md
+++ b/_posts/guides/2015-06-22-gitGuide.md
@@ -112,3 +112,6 @@ Fetch : `git fetch`
 ####get a remote branch:
 * `git fetch <origin> <branch>`
 * `git checkout <branch>`
+
+####Remove all of some file type
+* `git filter-branch -f --index-filter 'git rm --ignore-unmatch *.pptx'
