added first post, fixed everything up. Ready for initial deployment

--- a/_posts/projects/2014-11-03-TRL1440EXpost.md
+++ b/_posts/projects/2014-11-03-TRL1440EXpost.md
@@ -6,13 +6,14 @@ categories: projects
 tags:
 - lathe
 - turning
-- cam
+- CAM
 - HSMWorks
 - machining
 - code
 - javascript
-- cad
+- CAD
 - solidworks
+- CNC
 ---
 I wrote a post processor to post out of HSMWorks to a Trak TRL 1440EX. This was actually the first time that I had used Javascript.
 
@@ -37,7 +38,7 @@ capabilites = CAPABILITY_TURNING;
 allowedCircularPlanes = undefined; // allow any circular motion
 
 var xyzFormat = createFormat({decimals:(unit == MM ? 3 : 4), forceSign:true, forceDecimal:true,trimLeadZero:true,trim:true});
-var xFormat = createFormat({ decimals:(unit == MM ? 3 : 4), forceSign:true, forceDecimal:true,trimLeadZero:true,trim:true,scale:2}); //TRAK Runs on diameter, not radius, HSM outputs radius. 
+var xFormat = createFormat({ decimals:(unit == MM ? 3 : 4), forceSign:true, forceDecimal:true,trimLeadZero:true,trim:true,scale:2}); //TRAK Runs on diameter, not radius, HSM outputs radius.
 
 var xModal = createModal({prefix: " X"}, xFormat);
 var zModal = createModal({prefix: " Z"}, xyzFormat);
@@ -85,7 +86,7 @@ function resetXZ(){
 
 function onOpen(){
     resetModals();
-    writeBlock(gOutput.format(40)) //Sets the cutter to center (keeps trak control from calculating radius compensation) 
+    writeBlock(gOutput.format(40)) //Sets the cutter to center (keeps trak control from calculating radius compensation)
     //set working units
     if(unit==MM){
         writeBlock(gOutput.format(21));
@@ -119,7 +120,7 @@ function onSection(){
         writeBlock(newTool+SP+mOutput.format(6)+newSpeed); //goes home, kills spindle, change tool request
     }
     resetXZ();
-} 
+}
 
 
 function onRapid(x,y,z){
@@ -147,7 +148,7 @@ function onCircular(clockwise, cx, cy, cz, x, y, z, feedrate){
     }
     else if(ends&&!clockwise){
         writeBlock(gOutput.format(2)+ends+centers);
-    }   
+    }
 }
 
 function onSpindleSpeed(spindleSpeed){
