--- a/_posts/guides/2015-06-22-gitGuide.md
+++ b/_posts/guides/2015-06-22-gitGuide.md
@@ -3,17 +3,17 @@ layout: guide
 title:  "GIT"
 date:   2015-06-25
 categories: guides
-tags: 
-- git 
-- code 
+tags:
+- git
+- code
 - programming
 ---
 
 ###CONFIGURATION:
-* remember passwords : 
-    * windows:    
+* remember passwords :
+    * windows:
         * `git config --global credential.helper wincred`
-    * linux:      
+    * linux:
         * `git config --global credential.helper cache`
         * `git config --global credential.helper `cache --timeout=<sec>`
 * Posh-Git : helps powershell with git
@@ -56,19 +56,19 @@ Fetch : `git fetch`
     * `-a` : automatically stages any changed files
     * `--amend` : modifies the prior commit, you can add files and notes
 * `git rm` : removes a file, requires a commit to complete
-*     * `--chached` : removes from staging area but keeps in directory 
+*     * `--chached` : removes from staging area but keeps in directory
 * git pull : pulls down remote repository into local
     * `--rebase` : makes a mirror rather than a branch, does not cause merging when you push
 * git mv <source> <destination> : rename or move file  
 * git log : history of commits
      * `-p` : shows the changes between commits
-     * `-<n>` : shows only the <n> most recent commits 
+     * `-<n>` : shows only the <n> most recent commits
      * `--since` : since a date
      * `--stat` : shows stats for each commit (num of files changed etc..)
      * `--pretty` : takes a number of args to prettify output
          * `--pretty=oneline` : makes every commit one line
          * `--pretty=short` : makes a shortened format
-         * `--pretty=full` : 
+         * `--pretty=full` :
          * `--pretty=fuller` :
          * `--pretty=format: <format>` : formats output per format spec (http://www.git-scm.com/book/en/v2/ch00/pretty_format) <- could make an output to a text file to run a script and generate a nice log
 * `git push [remote-name] [branch-name]` : pushes up
@@ -78,7 +78,7 @@ Fetch : `git fetch`
     * `-a <version>` : saves a version tag
     * `-m <message>` : saves a message
     * after the fact : `git tag -a <version> <beginning of commit checksum>`
-* `git show <verion>` : shows tagged data   
+* `git show <verion>` : shows tagged data
 * `git push <remoterepo> --tags` : pushes tag locations
 * `git checkout -b <newBranch> <tag>` : checkout a tagged commit
 
@@ -114,4 +114,7 @@ Fetch : `git fetch`
 * `git checkout <branch>`
 
 ####Remove all of some file type
-* `git filter-branch -f --index-filter 'git rm --ignore-unmatch *.pptx'
+* `git filter-branch -f --index-filter 'git rm --ignore-unmatch *.pptx`
+
+####Set Atom as Git editor
+* `git config --global core.editor "atom --wait"`
