got inserting of media to work

--- a/_posts/blog/2015-06-27-welcome.md
+++ b/_posts/blog/2015-06-27-welcome.md
@@ -35,11 +35,12 @@ This allows me to just commit my work on the working branch, publish, and keep o
 
 ####Editor
 At first I was using sublime text, which has been my go to editor for a good three years. However, just today, I switched over to Atom. So far, it seems pretty slick. It has a nice built in markdown renderer that works well, lots of packages, really nice git support, and works with my touchscreen and touchpad (something which sublime did not do well). There are some things that need to be done to make Atom work well though.
+
 * The first thing is to change the Syntax Theme. The default is awful, I switched to monokai, which is way nicer.
 * Change some editor settings. Show the indent guide, show invisibles, use soft wrap, add a soft wrap hanging indent (I like 3), increase the tab length (I went to 4)
 * I added in the jekyll package. You could probably do without this, and I don't like to use the built in server (preffering to just jekyll serve)
 * In the Packages list, go down to the Tabs package (which is built in), and check Use Preview Tabs. If you don't do this you will quickly have way too many tabs open
-That's about it, I am sure I will tweak and configure it over time, but those things have me going.\
+That's about it, I am sure I will tweak and configure it over time, but those things have me going.
 
 As a side note for Atom, you can make it the default editor for GIT using this:`git config --global core.editor "atom --wait"`
 
