added to git guide

--- a/_posts/guides/2015-06-22-gitGuide.md
+++ b/_posts/guides/2015-06-22-gitGuide.md
@@ -1,7 +1,7 @@
 ---
 layout: guide
 title:  "GIT"
-date:   2015-06-25
+date:   2015-07-12
 categories: guides
 tags:
 - git
@@ -118,3 +118,6 @@ Fetch : `git fetch`
 
 ####Set Atom as Git editor
 * `git config --global core.editor "atom --wait"`
+
+####go back to a prior commit (you will loose any changes)
+* `git reset --hard <commit to go to ex:b5c3d8b>`
