got tags working #2 required changing papers category to writings category

--- a/_posts/writings/2008-12-05-tachyons.md
+++ b/_posts/writings/2008-12-05-tachyons.md
@@ -2,6 +2,6 @@
 layout: post
 title:  "Tachyons"
 date:   2008-12-05
-categories: papers
+categories: writings
 pdf: "otherFiles/papers/Tachyons.pdf"
 ---
