--- a/_posts/writings/2009-11-04-dracula.md
+++ b/_posts/writings/2009-11-04-dracula.md
@@ -2,6 +2,6 @@
 layout: post
 title:  "Synopsis of Dracula"
 date:   2011-03-11
-categories: papers
+categories: writings
 pdf: "otherFiles/papers/Dracula.pdf"
 ---
