--- a/_posts/guides/2015-07-10-adept.md
+++ b/_posts/guides/2015-07-10-adept.md
@@ -1,7 +1,7 @@
 ---
 layout: guide
 title:  "Adept Ace and V-Plus"
-date:   2015-07-10
+updated:   2015-07-10
 categories: guides
 tags:
 - robotics
