--- a/_posts/guides/2015-07-10-fits.md
+++ b/_posts/guides/2015-07-10-fits.md
@@ -1,7 +1,7 @@
 ---
 layout: guide
 title:  "Fits (Shafts, pins, etc...)"
-date:   2015-07-10
+updated:   2015-07-10
 categories: guides
 tags:
 - mechanical design
