changed landing page for projects and tags to be fancy fixed #3 fixed #4

--- a/_posts/projects/2014-12-01-viseKeys.md
+++ b/_posts/projects/2014-12-01-viseKeys.md
@@ -14,5 +14,7 @@ tags:
 - mechanics
 - CAD
 - solidworks
+thumb: "viseKey/WP_20141201_15_14_04_Pro.jpg"
+summary: Some vise keys I designed and machined
 ---
-The nice Kurt vises in the machine shop which I used to run needed some keys put in. Rather than ordering them, I figured it would be fun to make some. So that is what I did. They really weren't as close to tolerance as I would have liked for their usage, but such is life with a hybrid mill, aluminum, and questionable tooling. They sure do look good though, gotta love a sweet chamfer tool. After watching the work of the highly talented Mike Haggerty, I am totally convinced that almost everything should just be chamfered on the machine. 
+The nice Kurt vises in the machine shop which I used to run needed some keys put in. Rather than ordering them, I figured it would be fun to make some. So that is what I did. They really weren't as close to tolerance as I would have liked for their usage, but such is life with a hybrid mill, aluminum, and questionable tooling. They sure do look good though, gotta love a sweet chamfer tool. After watching the work of the highly talented Mike Haggerty, I am totally convinced that almost everything should just be chamfered on the machine.
