--- a/_posts/projects/2014-11-03-TRL1440EXpost.md
+++ b/_posts/projects/2014-11-03-TRL1440EXpost.md
@@ -14,6 +14,7 @@ tags:
 - CAD
 - solidworks
 - CNC
+summary: A post processor I wrote to run CAM jobs on a TRAK TRL 1440EX
 ---
 I wrote a post processor to post out of HSMWorks to a Trak TRL 1440EX. This was actually the first time that I had used Javascript.
 
