added magnet looking back post and fixed up headings

--- a/_posts/guides/2015-07-19-ruby.md
+++ b/_posts/guides/2015-07-19-ruby.md
@@ -9,7 +9,7 @@ tags:
 - programming
 - web
 ---
-#pry
+##pry
 * used to allow debugging
 * make sure to `require 'pry'`
 * breakpoints added by: `binding.pry`
