did some housekeeping and added links to CS projects

--- a/_posts/blog/2015-06-27-welcome.md
+++ b/_posts/blog/2015-06-27-welcome.md
@@ -3,6 +3,7 @@ layout: post
 title:  "Welcome To My Site"
 date:   2015-06-27
 categories: blog
+summary: I finally made a website, see how and why. 
 ---
 So it has been a long time coming, but I have finally built myself a website. So please wander around, give feedback, and enjoy. I will note that it is still a work in progress, so any problems you find and point out will help me progress faster :).
 
