--- a/_posts/blog/2015-07-23-July4th2015.md
+++ b/_posts/blog/2015-07-23-July4th2015.md
@@ -8,6 +8,8 @@ tags:
 - food
 - fireworks
 - girlfriend
+thumb: "2015July4/Saturday/20150704_212551.jpg"
+summary: Kathryn came to visit me in Indy for July 4th, we had a bunch of fun, check it out.
 ---
 I am way late posting this, but there should be post about July 4th...
 
