cleaned and added certificate problem to git guide

--- a/_posts/guides/2015-06-22-gitGuide.md
+++ b/_posts/guides/2015-06-22-gitGuide.md
@@ -1,7 +1,7 @@
 ---
 layout: guide
 title:  "GIT"
-updated:   2015-07-12
+updated:   2016-04-11
 categories: guides
 tags:
 - git
@@ -9,7 +9,7 @@ tags:
 - programming
 ---
 
-###CONFIGURATION:
+## CONFIGURATION:
 * remember passwords :
     * windows:
         * `git config --global credential.helper wincred`
@@ -26,11 +26,11 @@ Status : `git status`
 Fetch : `git fetch`
 
 
-###Settings:
+## Settings:
 * `git config`
     * `--list` : view list of all stuff
 
-###Set up remote:
+## Set up remote:
 * make branch track remote:
     * Given a branch foo and a remote upstream:
         * As of Git 1.8.0 : `git branch -u upstream/foo`
@@ -40,14 +40,14 @@ Fetch : `git fetch`
 
 
 
-####Help : `git help <verb>`
+## Help : `git help <verb>`
 
-###Setting up a repository
+## Setting up a repository
 * `git init` : make a new repository
-* `git clone <URL> <directory name - optional>`` : pull down a repository, optionally put it into a directory with name <directory name>
+* `git clone <URL> <directory name - optional>` : pull down a repository, optionally put it into a directory with name `<directory name>`
 
 
-###Running:
+## Running:
 * `git add <filename>` : will add a file to the next comment "staging"
 * `git status` : will report repository status
 * `git diff` : shows you what you have changed in your files
@@ -73,7 +73,7 @@ Fetch : `git fetch`
          * `--pretty=format: <format>` : formats output per format spec (http://www.git-scm.com/book/en/v2/ch00/pretty_format) <- could make an output to a text file to run a script and generate a nice log
 * `git push [remote-name] [branch-name]` : pushes up
 
-###Tags:
+## Tags:
 * git tag : shows tags
     * `-a <version>` : saves a version tag
     * `-m <message>` : saves a message
@@ -82,7 +82,7 @@ Fetch : `git fetch`
 * `git push <remoterepo> --tags` : pushes tag locations
 * `git checkout -b <newBranch> <tag>` : checkout a tagged commit
 
-###Branching:
+## Branching:
 * `git branch` : shows available branches
     * `<newBranch>` : makes a new branch at your current location
     * `-d <branch>` : deletes a branch
@@ -97,9 +97,9 @@ Fetch : `git fetch`
 
 
 
-###Ignoring files:
-* Make a file called ".gitignore"
-    * lines with # are ignored
+## Ignoring files:
+* Make a file called `.gitignore`
+    * lines with `#` are ignored
     * use glob notation
     * can use "/" for paths
     * EX:
@@ -107,17 +107,20 @@ Fetch : `git fetch`
         * `*~` : ignore files ending in ~
     * thoughts : binaries (o,a). temps (tmp, *~), logs
 
-
-
-####get a remote branch:
+## get a remote branch:
 * `git fetch <origin> <branch>`
 * `git checkout <branch>`
 
-####Remove all of some file type
+## Remove all of some file type
 * `git filter-branch -f --index-filter 'git rm --ignore-unmatch *.pptx`
 
-####Set Atom as Git editor
+## Set Atom as Git editor
 * `git config --global core.editor "atom --wait"`
 
-####go back to a prior commit (you will loose any changes)
+## go back to a prior commit (you will loose any changes)
 * `git reset --hard <commit to go to ex:b5c3d8b>`
+
+## Certificate problems
+`echo -n | openssl s_client -showcerts -connect <domain, ex: github.com:443> 2>/dev/null | sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' > ~/Documents/gitcerts.pem`
+
+`git config --global http.sslCAInfo ~/Documents/gitcerts.pem`
