Added some instructions for KRC2 RSI

--- a/_posts/guides/2015-10-01-kuka.md
+++ b/_posts/guides/2015-10-01-kuka.md
@@ -23,6 +23,29 @@ make writing KRL code a bit easier.
     * Go into Windows (`CTRL+ESC`)
     * run and configure via: C:\KRC\UTIL\KRCCONFIGURATOR\KrcConfigurator.exe
     * As an expert, file->archive->all
+    
+### RSI (Specifically RSI RSI 2.3.3)
+
+#### Setup (incomplete)
+This will help you setup and run the KUKA provided RSI example for Ethernet
+control. You will need a PC running Windows (preferably 7. You can find the KUKA RSI
+examples as well as RSI visual in: `D:\KUKA_OPT\RSI` on your KRC2 controller
+(after you have installed RSI). Specifically, we will be
+working with the example at `D:\KUKA_OPT\RSI\DOC\Examples\Ethernet`
+
+1. Logon as an expert user
+2. Press `ctrl`+`esc` to access windows
+3. Press `My Computer`
+4. Copy `D:\KUKA_OPT\RSI\DOC\Example\RealtimeEthernet\Server_app\ServerApplication.exe` to the
+   external windows machine via USB
+5. Copy `RSIEthernet.dat` and `RSIEthernet.src` from 
+   `D:\KUKA_OPT\RSI\DOC\Example\RealtimeEthernet\SRC_KRL\PROGRAM` to
+   the main programs folder
+6. Copy `xml
+7. Modify vx win to say:
+[Boot]
+Bootline=elPci(0,1)pc:vxworks h=192.0.1.2 b=192.0.1.1 e=172.0.1.1 u=target pw=vxworks
+
 
 ## KR C4
 
