made clear that krc2 setup for RSI is incomplete

--- a/_posts/guides/2015-10-01-kuka.md
+++ b/_posts/guides/2015-10-01-kuka.md
@@ -41,10 +41,12 @@ working with the example at `D:\KUKA_OPT\RSI\DOC\Examples\Ethernet`
 5. Copy `RSIEthernet.dat` and `RSIEthernet.src` from 
    `D:\KUKA_OPT\RSI\DOC\Example\RealtimeEthernet\SRC_KRL\PROGRAM` to
    the main programs folder
-6. Copy `xml
+6. Copy ?.xml
 7. Modify vx win to say:
 [Boot]
 Bootline=elPci(0,1)pc:vxworks h=192.0.1.2 b=192.0.1.1 e=172.0.1.1 u=target pw=vxworks
+
+TODO: Finish this up
 
 
 ## KR C4
