--- a/projects/_posts/2014-12-01-viseKeys.md
+++ b/projects/_posts/2014-12-01-viseKeys.md
@@ -3,7 +3,6 @@ layout: post
 title:  "Vise Keys"
 date:   2014-12-01
 categories: projects
-imageDir: viseKey
 tags:
 - mill
 - milling
@@ -14,7 +13,17 @@ tags:
 - mechanics
 - CAD
 - solidworks
-thumb: "viseKey/WP_20141201_15_14_04_Pro.jpg"
+thumb: https://c5.staticflickr.com/9/8563/28027462604_1730ba15d3_n.jpg
 summary: Some vise keys I designed and machined
 ---
 The nice Kurt vises in the machine shop which I used to run needed some keys put in. Rather than ordering them, I figured it would be fun to make some. So that is what I did. They really weren't as close to tolerance as I would have liked for their usage, but such is life with a hybrid mill, aluminum, and questionable tooling. They sure do look good though, gotta love a sweet chamfer tool. After watching the work of the highly talented Mike Haggerty, I am totally convinced that almost everything should just be chamfered on the machine.
+
+{::nomarkdown}
+{% include flickr.html
+        src="https://www.flickr.com/photos/138686863@N06/albums/72157668766486124/with/28027462604/"
+        title="vise keys"
+        img="https://c3.staticflickr.com/9/8468/28612447546_a2974ef887_z.jpg"
+        width=640
+        height=361
+        %}
+{:/nomarkdown}
