added line to rules about stress

--- a/guides/_posts/2016-10-07-rules.md
+++ b/guides/_posts/2016-10-07-rules.md
@@ -36,3 +36,4 @@ tags:
 17. Remember what "success" is to you. 
 18. Don't hold on too tight, it will all slip through your fingers. 
     - Don't be afraid, be measured
+    - Stress does not equate to caring and a lack of stress does not mean you don't care
