--- a/guides/_posts/2016-10-07-rules.md
+++ b/guides/_posts/2016-10-07-rules.md
@@ -19,7 +19,7 @@ tags:
     - For big decisions, lean on others to help you.
         - you don't need to do exactly as they say, but they should be inputs to your model.
 6. Fear is the path to the darkside. Fear leads to anger. Anger leads to hate. Hate leads to suffering. -Yoda
-    - Don't make decisions from a point of fear. Don't act out of hate.
+    - Don't make decisions from a place of fear, but instead from a place of love. Don't act out of hate, instead out of compassion.
 7. Rules for sex:
     - The first time both people must be sober.
     - You must discuss what happens if she gets pregnant before hand.
@@ -27,6 +27,8 @@ tags:
 8. Learn from your mistakes. They suck, if you don't learn from them, they will suck again.
 9. Be open with your feelings. Bottling them up will not help you. Share them with people you trust, they will help you.
 10. When you love someone, hang onto the things you love. Don't worry about the things you don't love, let the good outweigh the bad.
+    - Love her for exactly who she is, not for who she could be.
+    - Let go of her fitness, that isn't your job. You think she is beautiful the way she is, be honest with yourself on that.
 11. Walk your dog. Don't have a dog? Rescue a dog.
 12. No matter how much a relationship hurts, you can't push the other person away, you can't ignore it, you can't bottle it up. You have to talk to them.
 13. Never forget the importance of family and friends.
@@ -35,5 +37,6 @@ tags:
 16. Never try to go back, take what you have learned and move forward.
 17. Remember what "success" is to you. 
 18. Don't hold on too tight, it will all slip through your fingers. 
-    - Don't be afraid, be measured
-    - Stress does not equate to caring and a lack of stress does not mean you don't care
+    - Don't be afraid, be measured.
+    - Stress does not equate to caring and a lack of stress does not mean you don't care.
+19. As a child you need to keep your ID in check and as an adult, you need to keep your pride in check. Don't let them rule you.
