changed love to hope

--- a/guides/_posts/2016-10-07-rules.md
+++ b/guides/_posts/2016-10-07-rules.md
@@ -19,7 +19,7 @@ tags:
     - For big decisions, lean on others to help you.
         - you don't need to do exactly as they say, but they should be inputs to your model.
 6. Fear is the path to the darkside. Fear leads to anger. Anger leads to hate. Hate leads to suffering. -Yoda
-    - Don't make decisions from a place of fear, but instead from a place of love. Don't act out of hate, instead out of compassion.
+    - Don't make decisions from a place of fear, but instead from a place of hope. Don't act out of hate, instead out of love.
 7. Rules for sex:
     - The first time both people must be sober.
     - You must discuss what happens if she gets pregnant before hand.
