added note at the top of the rules page

--- a/guides/_posts/2016-10-07-rules.md
+++ b/guides/_posts/2016-10-07-rules.md
@@ -5,6 +5,7 @@ categories: guides
 tags:
 - life
 ---
+I feel like for the last 6 months I have really stopped following some of the rules I had been living by. Doing that got me into a situation that I am very unhappy about. So I decided to write them down for myself to try to remember them. In the process I re-evaluated some of them and added quite a few new ones. 
 
 1. Answer questions honestly, even if they hurt.
 2. Don't ask questions to which you do not want the answer.
