fixed cheap alcohol rule

--- a/guides/_posts/2016-10-07-rules.md
+++ b/guides/_posts/2016-10-07-rules.md
@@ -2,7 +2,7 @@
 layout: guide
 title:  "My Rules (warning: mature content)"
 categories: guides
-updated: 2017-10-22
+updated: 2017-10-30
 tags:
 - life
 ---
@@ -42,4 +42,4 @@ I feel like for the last 6 months I have really stopped following some of the ru
     - Don't be afraid, be measured.
     - Stress does not equate to caring and a lack of stress does not mean you don't care.
 19. As a child you need to keep your ID in check and as an adult, you need to keep your pride in check. Don't let them rule you.
-20. If you wouldn't pay market price for the alcohol, don't drink it.
+20. If alcohol is so low quality that you wouldn't pay market price for it, don't drink it (I'm talking to you grad student events).
