reworded impaired sex rule to apply more generally

--- a/guides/_posts/2016-10-07-rules.md
+++ b/guides/_posts/2016-10-07-rules.md
@@ -23,7 +23,7 @@ I feel like for the last 6 months I have really stopped following some of the ru
 6. Fear is the path to the darkside. Fear leads to anger. Anger leads to hate. Hate leads to suffering. -Yoda
     - Don't make decisions from a place of fear, but instead from a place of hope. Don't act out of hate, instead out of love.
 7. Rules for sex:
-    - The first time both people must be sober.
+    - You can't go any farther than you have been when inebriated/impaired.
     - You must discuss what happens if she gets pregnant before hand.
     - She must be someone you will always love, even if your relationship were to end.
 8. Learn from your mistakes. They suck, if you don't learn from them, they will suck again.
