removed love till death rule
This rule was too high of a standard. There is no way to know if it is
being followed or not. Even if it could be known, it is not clear that
it is a rule that I should be held to.

--- a/guides/_posts/2016-10-07-rules.md
+++ b/guides/_posts/2016-10-07-rules.md
@@ -24,8 +24,7 @@ I feel like for the last 6 months I have really stopped following some of the ru
     - Don't make decisions from a place of fear, but instead from a place of hope. Don't act out of hate, instead out of love.
 7. Rules for sex:
     - You can't go any farther than you have been when inebriated/impaired.
-    - You must discuss what happens if she gets pregnant before hand.
-    - She must be someone you will always love, even if your relationship were to end.
+    - You must discuss what happens if she gets pregnant before having sex.
 8. Learn from your mistakes. They suck, if you don't learn from them, they will suck again.
 9. Be open with your feelings. Bottling them up will not help you. Share them with people you trust, they will help you.
 10. When you love someone, hang onto the things you love. Don't worry about the things you don't love, let the good outweigh the bad.
