clarify inebriated sex rule

--- a/guides/_posts/2016-10-07-rules.md
+++ b/guides/_posts/2016-10-07-rules.md
@@ -23,7 +23,7 @@ I feel like for the last 6 months I have really stopped following some of the ru
 6. Fear is the path to the darkside. Fear leads to anger. Anger leads to hate. Hate leads to suffering. -Yoda
     - Don't make decisions from a place of fear, but instead from a place of hope. Don't act out of hate, instead out of love.
 7. Rules for sex:
-    - You can't go any farther than you have been when inebriated/impaired.
+    - When inebriated/impaired, you can't go any farther than you have been prior.
     - You must discuss what happens if she gets pregnant before having sex.
 8. Learn from your mistakes. They suck, if you don't learn from them, they will suck again.
 9. Be open with your feelings. Bottling them up will not help you. Share them with people you trust, they will help you.
