removed ex gf stuff

--- a/blog/_posts/2015-07-23-July4th2015.md
+++ b/blog/_posts/2015-07-23-July4th2015.md
@@ -10,6 +10,7 @@ tags:
 - girlfriend
 thumb: https://c8.staticflickr.com/9/8773/28611275615_bd98fdfab1_m.jpg
 summary: Kathryn came to visit me in Indy for July 4th, we had a bunch of fun, check it out.
+published: false
 ---
 I am way late posting this, but there should be post about July 4th...
 
