added tags to the flo papers

--- a/writings/_posts/2019-05-06-jrate-flo.md
+++ b/writings/_posts/2019-05-06-jrate-flo.md
@@ -1,9 +1,16 @@
 ---
 layout: post
-title:  "Design of an Affordable Socially Assistive Robot for Remote Health and Function Monitoring and Prognostication"
-date:   2019-05-06
+title: "Design of an Affordable Socially Assistive Robot for Remote Health and Function Monitoring and Prognostication"
+date: 2019-05-06
 categories: writings
+tags:
+  - flo
+  - SAR
+  - academic papers
+  - doctoral work
+  - journal papers
 pdf: "otherFiles/papers/ijphm-flo.pdf"
 ---
-This is a paper that we published in the International Journal of Prognostics and Health Management. 
+
+This is a paper that we published in the International Journal of Prognostics and Health Management.
 The final published version is available from [the PHM Society](https://www.phmsociety.org/node/2548).
