add convert pdf to png

--- a/guides/_posts/2017-09-20-latex.md
+++ b/guides/_posts/2017-09-20-latex.md
@@ -2,7 +2,7 @@
 layout: guide
 title:  "Tips for LaTeX"
 categories: guides
-updated: 2019-02-20
+updated: 2021-03-13
 tags:
 - LaTeX
 ---
@@ -18,3 +18,6 @@ When you compile with latex, the result will have whatever images you included i
 `gs -dPDFSETTINGS=/prepress -dNOPAUSE -dQUIET -dBATCH -dCompatibilityLevel=1.4 -sDEVICE=pdfwrite -sOutputFile=out.pdf in.pdf`
 
 You can change `-dPDFSETTINGS` to `/default` if you want a huge file (almost the same as what LaTeX uses) or to `/printer` if you want something a bit smaller. The other options start to get too small
+
+## Bringing PDFs to to other image types:
+`for f in *.pdf; do pdftocairo -png -r '600' -transp "$f" "$f.png"; done`
