--- a/writings/_posts/2019-05-06-ijphm-flo.md
+++ b/writings/_posts/2019-05-06-ijphm-flo.md
@@ -13,4 +13,4 @@ pdf: "otherFiles/papers/ijphm-flo.pdf"
 ---
 
 This is a paper that we published in the International Journal of Prognostics and Health Management.
-The final published version is available from [the PHM Society](https://www.phmsociety.org/node/2548).
+The final published version is available from [the PHM Society](https://papers.phmsociety.org/index.php/ijphm/article/view/2706).
