--- a/writings/_posts/2009-11-04-dracula.md
+++ b/writings/_posts/2009-11-04-dracula.md
@@ -1,7 +1,8 @@
 ---
 layout: post
-title:  "Synopsis of Dracula"
-date:   2011-03-11
+title: "Synopsis of Dracula"
+date: 2011-03-11
 categories: writings
 pdf: "otherFiles/papers/Dracula.pdf"
+published: false
 ---
