--- a/writings/_posts/2014-11-24-alport.md
+++ b/writings/_posts/2014-11-24-alport.md
@@ -1,8 +1,10 @@
 ---
 layout: post
-title:  "Does Inhibiting the Discoidin Domain Receptor 1 Collagen Receptor Prevent Renal Fibrosis Due to Alport Syndrome?"
-date:   2014-11-24
+title: "Does Inhibiting the Discoidin Domain Receptor 1 Collagen Receptor Prevent Renal Fibrosis Due to Alport Syndrome?"
+date: 2014-11-24
 categories: writings
 pdf: "otherFiles/papers/Alport51GrantRequest.pdf"
+published: false
 ---
+
 As part of our Physiology of Cellular & Molecular Systems we were required to, as part of a group, develop a portion of a NIH R21 grant request (1+6). We focused on developing knowledge around Alport Syndrome. We also made a presentation on the request: [Alport Presentation](https://onedrive.live.com/redir?resid=5081E31F30D8F168!378672&authkey=!ADpYESVmlifC1ZY&ithint=file%2cpptx)
